fixes trim